Updated IndependentPlayerMatchManagerTest